Add btn and btn--subscribe style classs

--- a/layouts/partials/subscribe.html
+++ b/layouts/partials/subscribe.html
@@ -6,6 +6,6 @@
   <label class='blog-extras-container__title' for="tlemail">Enter your email to receive the latest content!</label>
   <p><input class='subscribe__input' type="text" name="email" id="tlemail"/></p>
   <input type="hidden" value="1" name="embed"/>
-  <button class='subscribe__submit-btn' type="submit">Subscribe</button>
+  <button class='btn btn--subscribe' type="submit">Subscribe</button>
 </form>
 
