Replace link mixin with nested-links

--- a/layouts/partials/share-buttons-horizontal.html
+++ b/layouts/partials/share-buttons-horizontal.html
@@ -1,4 +1,4 @@
-<div class="blog-extras-container">
+<div class="blog-extras-container nested-links">
   <div class="blog-extras-container__title">
     Spread the word! 
   </div>
