--- a/layouts/partials/site-license.html
+++ b/layouts/partials/site-license.html
@@ -1,4 +1,4 @@
-<div class="site-license" role="contentinfo">
+<div class="site-license nested-links" role="contentinfo">
     Content license:
     <a rel="license noopener" target="_blank" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
 </div>
