--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -13,7 +13,7 @@
       {{ .Date.Format "January 2, 2006" }}
     </time>
     <h1 class="article__title--large">{{ .Title }}</h1>
-    <section class="article__content">
+    <section class="article__content nested-links">
       {{ .Content }}
     </section>
   </article>
