--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,7 +2,7 @@
   {{ partial "site-navigation.html" . }}
 {{ end }}
 {{ define "main" }}
-  <div class="not-found">
+  <div class="not-found nested-links">
     <h2>
       The requested page was not found. Return to <a href='{{ "/" | absURL }}'>home</a>.
     </h2>
