--- a/layouts/partials/extra-content.html
+++ b/layouts/partials/extra-content.html
@@ -1,4 +1,4 @@
-<div class="blog-extras-container">
+<div class="blog-extras-container nested-links">
   <div class="blog-extras-container__title">
     You might also like:
   </div>
