--- a/layouts/partials/subscribe.html
+++ b/layouts/partials/subscribe.html
@@ -1,4 +1,4 @@
-<form class="blog-extras-container blog-extras-container--center"
+<form class="blog-extras-container blog-extras-container--center nested-links"
       action="https://tinyletter.com/developerdavo-noreply"
       method="post"
       target="popupwindow"
