Copy pre-styles.css to styles.css

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,4 @@
 @import "normalize.css/normalize.css";
-@import "dist/pre-styles.css";
 @import "syntax.css";
 
 @custom-media --small screen and (min-width: 576px);
@@ -123,7 +122,225 @@ html {
     color: white;
   }
 }
- 
+
+/* TODO: move to styles.css */
+.social-icon {
+  display: inline-block;
+  z-index: 999;
+  fill: rgba(255,255,255,0.8);
+  transition: all 0.15s ease-in;
+  margin-right: 0.5rem;
+}
+.social-icon--twitter:hover,
+.social-icon--twitter :focus {
+  fill: #1da1f2;
+}
+.social-icon--github:hover,
+.social-icon--github :focus {
+  fill: #000;
+}
+.page {
+  margin: 0 auto;
+  padding: 0 0.5rem;
+}
+@media screen and (min-width: 576px) {
+  .page {
+    padding: 0 1rem;
+    max-width: 576px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .page {
+    max-width: 576px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .page {
+    max-width: 768px;
+  }
+}
+.about {
+  text-align: center;
+}
+.index-anchor {
+  display: block;
+  background-color: #fff;
+  margin: 0.5rem auto;
+  box-shadow: 0 0 4px 2px rgba(0,0,0,0.2);
+  text-decoration: none;
+}
+.index-anchor:hover,
+.index-anchor:focus {
+  transition: all 0.2s;
+  background-color: #63a4ff;
+}
+@media screen and (min-width: 576px) {
+  .index-anchor {
+    margin: 1rem auto;
+  }
+}
+.summary {
+  padding: 1rem;
+  color: rgba(0,0,0,0.8);
+  overflow: hidden;
+}
+@media screen and (min-width: 576px) {
+  .summary {
+    padding: 2rem;
+  }
+}
+.summary__excerpt {
+  color: rgba(0,0,0,0.6);
+}
+body.fixed-nav-parent nav {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  box-shadow: 0 5px 0 rgba(0,0,0,0.1);
+}
+.article {
+  margin: 1rem auto 0;
+  padding: 1rem;
+  box-shadow: 0 0 4px 2px rgba(0,0,0,0.2);
+  background-color: #fff;
+}
+@media screen and (min-width: 768px) {
+  .article {
+    margin-top: 2rem;
+    padding: 1.5rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .article {
+    margin-top: 4rem;
+    padding: 2rem;
+  }
+}
+.article__date {
+  font-family: 'avenir next', avenir, sans-serif;
+  font-size: 0.625rem;
+}
+@media screen and (min-width: 768px) {
+  .article__date {
+    font-size: 0.75rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .article__date {
+    font-size: 0.875rem;
+  }
+}
+.article__title {
+  font-family: athelas, georgia, serif;
+  font-size: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .article__title {
+    font-size: 1.25rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .article__title {
+    font-size: 1.5rem;
+  }
+}
+.article__title--large {
+  font-size: 1.25rem;
+}
+@media screen and (min-width: 768px) {
+  .article__title--large {
+    font-size: 1.5rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .article__title--large {
+    font-size: 1.75rem;
+  }
+}
+.article__content {
+  margin-top: 0.5rem;
+}
+.article-extra {
+  margin: 0.5rem auto 0;
+  padding-top: 0.25rem;
+  max-width: 768px;
+}
+.blog-extras-container {
+  box-shadow: 0 0 4px 2px rgba(0,0,0,0.2);
+  background-color: #fff;
+  padding: 1rem;
+}
+.blog-extras-container__title {
+  font-weight: bolder;
+}
+.blog-extras-container--center {
+  text-align: center;
+}
+.fb-share-button span {
+  vertical-align: initial !important;
+}
+.fb-share-button,
+.twitter-share-button {
+  display: inline;
+  vertical-align: top;
+}
+#github-repo-button iframe {
+  vertical-align: middle !important;
+}
+.subscribe__input {
+  border-style: solid;
+  border-width: 1px;
+  border-color: rgba(0,0,0,0.2);
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+  width: 80%;
+}
+.link-to-repo {
+  vertical-align: middle;
+  text-align: center;
+  margin: 2rem auto 0;
+}
+.site-license {
+  margin: 2rem auto 1rem;
+  text-align: center;
+}
+.site-license a {
+  text-decoration: none;
+}
+pre {
+  overflow-x: auto;
+  overflow-y: hidden;
+  position: relative;
+  hyphens: none;
+}
+pre code {
+  display: block;
+  padding: 1em;
+  font-size: 0.625rem;
+}
+@media screen and (min-width: 768px) {
+  pre code {
+    font-size: 0.75rem;
+    padding: 1.25em;
+  }
+}
+@media screen and (min-width: 992px) {
+  pre code {
+    font-size: 0.875rem;
+    padding: 1.5em;
+  }
+}
+.not-found {
+  text-align: center;
+  margin-top: 2rem;
+}
+.not-found__gif {
+  background-image: url("https://media.giphy.com/media/OfpdDt12u1Psk/giphy.gif");
+  background-repeat: no-repeat;
+  background-position: top;
+  height: 20rem;
+}
+
 .btn {
   display: inline-block;
   border-style: solid;
