--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,8 +11,8 @@
   --black-2: rgba(0, 0, 0, 0.2);
 
   --near-white: #f4f4f4;
-  --white-8: rgba( 255, 255, 255, .8 );
-  --white-9: rgba( 255, 255, 255, .9 );
+  --white-8: rgba(255, 255, 255, 0.8);
+  --white-9: rgba(255, 255, 255, 0.9);
 
   --card-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2);
   --primary: #1976d2;
@@ -24,12 +24,30 @@ html {
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
 .nested-links a {
   color: initial;
+  &:hover,
+  &:focus {
+    opacity: 0.5;
+    transition: all 0.15s ease-in;
+  }
+}
+
+.btn {
+  display: inline-block;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 0.25em;
+  padding: 0.25rem 0.5rem 0.25rem 0.5rem;
+  text-align: center;
+  color: initial;
+  cursor: pointer;
   &:hover,
   &:focus {
     opacity: 0.5;
@@ -118,7 +136,7 @@ html {
   color: var(--white-8);
   display: inline-block;
   &:hover,
-  &:focus { 
+  &:focus {
     color: white;
   }
 }
@@ -157,6 +175,12 @@ html {
   text-align: center;
 }
 
+.index-share-horizontal {
+  margin: 0.5rem auto;
+  @media (--small) {
+    margin: 1rem auto;
+  }
+}
 .index-anchor {
   display: block;
   background-color: #fff;
@@ -172,7 +196,7 @@ html {
     margin: 1rem auto;
   }
 }
- 
+
 .summary {
   padding: 1rem;
   color: var(--black-8);
@@ -189,7 +213,7 @@ body.fixed-nav-parent nav {
   position: fixed;
   top: 0;
   z-index: 1;
-  box-shadow: 0 5px 0 rgba(0,0,0,0.1);
+  box-shadow: 0 5px 0 rgba(0, 0, 0, 0.1);
 }
 
 .article {
@@ -207,7 +231,7 @@ body.fixed-nav-parent nav {
   }
 }
 .article__date {
-  font-family: 'avenir next', avenir, sans-serif;
+  font-family: "avenir next", avenir, sans-serif;
   font-size: 0.625rem;
   @media (--medium) {
     font-size: 0.75rem;
@@ -264,11 +288,24 @@ body.fixed-nav-parent nav {
   margin-bottom: 0.5rem;
   width: 80%;
 }
+
+.btn--subscribe {
+  background-color: var(--primary);
+  border-color: var(--primary);
+  color: white;
+}
+
 .link-to-repo {
   vertical-align: middle;
   text-align: center;
   margin: 2rem auto 0;
 }
+
+.btn--github {
+  background-image: linear-gradient(to bottom, #fafbfc, #e4ebf0);
+  border-color: #d1d2d3;
+}
+
 .site-license {
   margin: 2rem auto 1rem;
   text-align: center;
@@ -276,6 +313,7 @@ body.fixed-nav-parent nav {
 .site-license a {
   text-decoration: none;
 }
+
 pre {
   overflow-x: auto;
   overflow-y: hidden;
@@ -307,33 +345,6 @@ pre code {
   height: 20rem;
 }
 
-.btn {
-  display: inline-block;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 0.25em;
-  padding: 0.25rem 0.5rem 0.25rem 0.5rem;
-  text-align: center;
-  color: initial;
-  cursor: pointer;
-  &:hover,
-  &:focus {
-    opacity: 0.5;
-    transition: all 0.15s ease-in;
-  }
-}
-
-.btn--github {
-  background-image: linear-gradient(to bottom, #fafbfc, #e4ebf0);
-  border-color: #d1d2d3;
-}
-
-.btn--subscribe {
-  background-color: var(--primary);
-  border-color: var(--primary);
-  color: white;
-}
-
 .share-buttons-vertical {
   display: none;
   @media (--medium) {
@@ -359,18 +370,11 @@ pre code {
   }
 }
 
-.index-share-horizontal {
-  margin: 0.5rem auto;
-  @media (--small) {
-    margin: 1rem auto
-  }
-}
-
 .share-buttons-horizontal {
   display: flex;
   justify-content: start;
 }
 
 .share-button-horizontal {
-  margin: 0.5rem 0.5rem 0 0
+  margin: 0.5rem 0.5rem 0 0;
 }
