Remove shadow from share-buttons-vertica and set z-index to -1

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -347,11 +347,11 @@ pre code {
 }
 
 .share-buttons-vertical {
+  z-index: -1;
   display: none;
   @media (--medium) {
     background-color: white;
     border-radius: 0.4rem;
-    box-shadow: var(--card-shadow);
     display: block;
     margin: 1rem;
     position: fixed;
