Update link-to-repo text

--- a/layouts/partials/link-to-repo.html
+++ b/layouts/partials/link-to-repo.html
@@ -1,4 +1,4 @@
 <div class="link-to-repo nested-links">
-  The source code for this website can be found on
+  View the source code on
   <button class="btn btn--github" onclick="window.open('https://github.com/DeveloperDavo/learnitmyway','_blank, noopener')">GitHub</button>
 </div>
