--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -283,6 +283,7 @@ pre code {
   display: none;
   @media (--medium) {
     z-index: 201;
+    background-color: white;
     border-radius: 0.4rem;
     display: block;
     margin: 0.75rem;
