Decrease padding of extra-content-items

--- a/layouts/partials/extra-content.html
+++ b/layouts/partials/extra-content.html
@@ -2,7 +2,7 @@
   <div class="blog-extras-container__title">
     You might also like:
   </div>
-  <ul>
+  <ul class="extra-content-items">
     {{ $extraContent := $.Params.extraContent}}
     {{ range $element := $extraContent }}
     <li>
