Add margin to not-found style class

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -273,7 +273,7 @@ pre code {
 
 .not-found {
   text-align: center;
-  margin-top: 1rem;
+  margin: 1rem;
 }
 .not-found__gif {
   background-image: url("https://media.giphy.com/media/OfpdDt12u1Psk/giphy.gif");
