--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,6 +16,8 @@
   --primary: #1976d2;
   --primary-dark: #004ba0;
   --primary-light: #63a4ff;
+  --accent: #004ba0;
+
   font-size: 14px;
   @media (--medium) {
     font-size: 16px;
@@ -179,6 +181,11 @@ html {
 }
 .summary__excerpt {
   color: var(--black-6);
+}
+.article__publisher-info {
+  padding-top: 1rem;
+  font-size: 0.75;
+  color: var(--accent);
 }
 
 body.fixed-nav-parent nav {
