--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,5 +26,13 @@
 {{ end }}
 {{ end }}
 {{ define "scripts" }}
+  <script>
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("./js/service-worker.js").then(function() {
+        console.log("Service Worker Registered");
+      });
+    }
+  </script>
+
   <script src="{{ "js/share-buttons.js" | absURL }}"></script>
 {{ end }}
