Replace .body-wrapper with body

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -51,7 +51,7 @@
     {{ end }}
   </head>
 
-  <body class="body-wrapper">
+  <body>
 
     {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}
     <main>
