--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,5 +26,5 @@
 {{ end }}
 {{ end }}
 {{ define "scripts" }}
-  <script src="{{ "js/share-buttons.js" | absURL }}"></script>
+  <script src="{{ "js/share-buttons.js" }}"></script>
 {{ end }}
