--- a/layouts/partials/icon/twitter-anchor.html
+++ b/layouts/partials/icon/twitter-anchor.html
@@ -1,3 +1,3 @@
 <a class="popup" href="https://twitter.com/intent/tweet?text={{ .Title | default .Site.Title }}&via=DeveloperDavo%20{{ .Permalink }}">
-  <img height="32px" width="32px" src='{{ "dist/img/twitter.svg" | absURL }}' />
+  <img height="32px" width="32px" src='{{ "dist/img/twitter.svg" }}' />
 </a>
