Use absolute paths

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -35,6 +35,6 @@
   <div></div>
 {{ end }}
 {{ define "scripts" }}
-  <script src="{{ "js/single.js" }}"></script>
-  <script src="{{ "js/share-buttons.js" }}"></script>
+  <script src="{{ "/js/single.js" }}"></script>
+  <script src="{{ "/js/share-buttons.js" }}"></script>
 {{ end }}
