Revert "Remove absolute urls"
This reverts commit 8b307d3612bf0832b781f8abb684fa7cb2398aaf.

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -4,7 +4,7 @@
 {{ define "main" }}
   <div class="not-found nested-links">
     <h2>
-      The requested page was not found. Return to <a href='{{ "/" }}'>home</a>.
+      The requested page was not found. Return to <a href='{{ "/" | absURL }}'>home</a>.
     </h2>
     <div class="not-found__gif"></div>
   </div>
