--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,7 +17,7 @@
       <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
     {{ end }}
 
-    <link href='{{ "dist/styles.css" }}' rel='stylesheet' type="text/css" />
+    <link href='{{ "dist/styles.css" | absURL }}' rel='stylesheet' type="text/css" />
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
@@ -39,7 +39,7 @@
     {{- template "_internal/schema.html" . -}}
 
     <meta property="fb:app_id" content="366384430479764"/>
-    <meta property="og:image" content='{{ "dist/img/logo-200w.png" }}'/>
+    <meta property="og:image" content='{{ "dist/img/logo-200w.png" | absURL }}'/>
     <meta property="og:image:width" content="200"/>
     <meta property="og:image:height" content="200"/>
     <meta property="og:title" content="{{ .Title | default .Site.Title }}" />
