Create bio partial and add it to index and single

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,10 +1,10 @@
 {{ define "main" }}
 {{ partial "share-buttons-vertical.html" . }}
 <div class="page">
-  <div class="about">
-    {{ .Content }}
+  <div class="article-extra">
+      {{ partial "bio.html" . }}
   </div>
-  <div class="index-subscribe">
+  <div class="article-extra">
     {{ partial "subscribe.html" . }}
   </div>
   <div class="index-share-horizontal share-horizontal">
