--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -18,6 +18,9 @@
     </section>
   </article>
   <div class="article-extra">
+      {{ partial "bio.html" . }}
+  </div>
+  <div class="article-extra">
     {{ partial "subscribe.html" . }}
   </div>
   <div class="share-horizontal article-extra">
