--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -140,7 +140,7 @@ html {
 
 .social-icon {
   display: inline-block;
-  fill: white;
+  fill: lightgray;
   transition: all 0.15s ease-in;
   margin-right: 0.5rem;
 }
@@ -160,11 +160,6 @@ html {
   @media (--large) {
     max-width: var(--medium);
   }
-}
-
-.about {
-  padding: 1rem;
-  text-align: center;
 }
 
 .index-share-horizontal {
@@ -236,6 +231,61 @@ html {
 }
 .extra-content-items {
   padding-left: 1rem;
+}
+
+.bio {
+  box-shadow: var(--card-shadow);
+  background-color: #fff;
+  padding: 1rem;
+}
+
+.bio--small {
+  @media (--small) {
+    display: none
+  }
+}
+
+.bio--large {
+  display: none;
+  @media (--small) {
+    display: flex
+  }
+}
+
+.bio__img {
+  border-radius: 50%;
+  height: 8rem;
+  width: 8rem;
+}
+
+.bio__top {
+ display: flex
+}
+
+.bio__left {
+  flex: 1;
+}
+
+.bio__right {
+  flex: 1;
+  text-align: right;
+}
+
+.bio__large__top {
+  display: flex
+ }
+
+.bio__large__right {
+  margin-left: 1rem;
+}
+
+.bio__large__author {
+  margin: 0;
+}
+
+.bio__large__social {
+  flex: 1;
+  text-align: right;
 }
 
 .subscribe__input {
