--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,6 +11,7 @@
   --card-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2);
   --primary: #1976d2;
   --primary-dark: #004ba0;
+  --primary-dark-9:rgb(0, 75, 160, 0.9);
   --primary-light: #63a4ff;
 
   --small: 576px;
@@ -76,11 +77,12 @@ html {
 .site-header {
   z-index: 20;
   position: relative;
-  background-color: var(--primary-dark);
   background-repeat: no-repeat;
-  background-position: top center;
   background-size: cover;
   box-shadow: var(--card-shadow);
+}
+.site-header-below {
+  background-color: var(--primary-dark-9);
 }
 .site-header__social-follow-wrapper {
   padding: 1rem;
@@ -98,7 +100,7 @@ html {
 .site-header__header-text {
   margin: 0;
   color: white;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 1.25;
   font-size: 3rem;
 }
@@ -106,7 +108,7 @@ html {
   margin: 0.75rem auto 0;
   padding: 1rem;
   font-style: italic;
-  font-weight: 200;
+  font-weight: 300;
   color: white;
 }
 
