Change social-icons to white fill when not part of bio

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -139,9 +139,12 @@ html {
 
 .social-icon {
   display: inline-block;
-  fill: lightgray;
+  fill: white;
   transition: all 0.15s ease-in;
   margin-right: 0.5rem;
+}
+.bio .social-icon {
+  fill: lightgray;
 }
 .social-icon--twitter:hover,
 .social-icon--twitter :focus {
