Create privacy-policy.html and add it to baseof.html

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -66,6 +66,9 @@
         {{ partial "site-license.html" .}}
       </div>
       <div>
+        {{ partial "privacy-policy.html" .}}
+      </div>
+      <div>
         {{ block "footer-nav" . }}{{ partial "site-navigation.html" .}}{{ end }}
       </div>
       {{ end }}
