Change article__title styles

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -12,7 +12,7 @@
     <time class="article__date" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
       {{ .Date.Format "January 2, 2006" }}
     </time>
-    <h1 class="article__title--large">{{ .Title }}</h1>
+    <h1 class="article__title">{{ .Title }}</h1>
     <section class="article__content nested-links">
       {{ .Content }}
     </section>
