--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -1,12 +1,10 @@
-<header style="background-image: url('{{ "dist/img/blackboard.jpg" | absURL }}');" class="site-header">
-  <div class="site-header-below">
-    <div class="site-header__text">
-      <h1 class="site-header__header-text">
-        {{ .Title | default .Site.Title }}
-      </h1>
-      <h3 class="site-header__subheader-text">
-        {{ .Params.Quote }}
-      </h3>
-    </div>
+<header class="site-header">
+  <div class="site-header__text">
+    <h1 class="site-header__header-text">
+      {{ .Title | default .Site.Title }}
+    </h1>
+    <h3 class="site-header__subheader-text">
+      {{ .Params.Quote }}
+    </h3>
   </div>
 </header>
