--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -88,7 +88,7 @@ html {
 .site-header__text {
   font-family: "avenir next", avenir, sans-serif;
   text-align: center;
-  padding: 5rem 1.5rem 2rem;;
+  padding: 4rem 1.5rem;
   margin: 0 auto;
   max-width: var(--small);
   @media (--large) {
