--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -284,19 +284,8 @@ html {
   text-align: right;
 }
 
-.subscribe__input {
-  border-style: solid;
-  border-width: 1px;
-  border-color: var(--black-2);
-  padding: 0.5rem;
-  margin-bottom: 0.5rem;
-  width: 80%;
-}
-
-.btn--subscribe {
-  background-color: var(--primary);
-  border-color: var(--primary);
-  color: white;
+.newsletter-link {
+  white-space: nowrap
 }
 
 .link-to-repo {
