--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,7 +12,8 @@
 
   --near-white: #f4f4f4;
 
-  --card-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2);
+  --card-shadow-4: 0 4px 6px 0 rgba(0, 0, 0, 0.2);
+  --card-shadow-2: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
   --primary: #1976d2;
   --primary-dark: #004ba0;
   --primary-light: #63a4ff;
@@ -79,7 +80,7 @@ html {
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
-  box-shadow: var(--card-shadow);
+  box-shadow: var(--card-shadow-4);
 }
 
 .site-header__social-follow-wrapper {
@@ -119,7 +120,7 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: var(--card-shadow);
+  box-shadow: var(--card-shadow-4);
 }
 
 .nav__title {
@@ -169,7 +170,7 @@ html {
   display: block;
   background-color: #fff;
   margin: 0.75rem auto;
-  box-shadow: var(--card-shadow);
+  box-shadow: var(--card-shadow-4);
   text-decoration: none;
   &:hover,
   &:focus {
@@ -195,7 +196,7 @@ html {
 .article {
   margin: 1.5rem auto 0;
   padding: 1.25rem;
-  box-shadow: var(--card-shadow);
+  box-shadow: var(--card-shadow-4);
   background-color: #fff;
 }
 .article__date {
@@ -216,7 +217,7 @@ html {
 }
 
 .blog-extras-container {
-  box-shadow: var(--card-shadow);
+  box-shadow: var(--card-shadow-4);
   background-color: #fff;
   padding: 1rem;
 }
@@ -231,7 +232,7 @@ html {
 }
 
 .bio {
-  box-shadow: var(--card-shadow);
+  box-shadow: var(--card-shadow-4);
   background-color: #fff;
   padding: 1rem;
 }
@@ -335,6 +336,7 @@ pre code {
     top: 0;
     z-index: 1;
     text-align: center;
+    box-shadow: var(--card-shadow-4);
   }
 }
 .share-buttons-vertical__text {
