--- a/layouts/post/summary.html
+++ b/layouts/post/summary.html
@@ -4,7 +4,7 @@
       {{ .Date.Format "January 2, 2006" }}
     </div>
   {{ end }}
-  <h2 class="article__title">
+  <h2 class="summary__title">
     {{ .Title }}
   </h2>
   <div class="summary__excerpt">
