--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,7 +14,6 @@
 
   --card-shadow-4: 0 4px 6px 0 rgba(0, 0, 0, 0.2);
   --card-shadow-2: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
-  --primary: #1976d2;
   --primary-dark: #004ba0;
   --primary-light: #63a4ff;
 
@@ -42,7 +41,7 @@ html {
 }
 
 .nested-links a {
-  color: var(--primary);
+  color: var(--primary-dark);
   &:hover,
   &:focus {
     opacity: 0.5;
