Add alt tags to share button images

--- a/layouts/partials/icon/fb-anchor.html
+++ b/layouts/partials/icon/fb-anchor.html
@@ -1,3 +1,11 @@
-<a class="popup" href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }}">
-  <img height="32px" width="32px" src='{{ "dist/img/facebook.svg" | absURL }}' />
+<a
+  class="popup"
+  href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }}"
+>
+  <img
+    height="32px"
+    width="32px"
+    src="{{ 'dist/img/facebook.svg' | absURL }}"
+    alt="facebook"
+  />
 </a>
