--- a/layouts/partials/icon/linkedin-anchor.html
+++ b/layouts/partials/icon/linkedin-anchor.html
@@ -1,6 +1,14 @@
-<a class="popup" href="http://www.linkedin.com/shareArticle?mini=true
+<a
+  class="popup"
+  href="http://www.linkedin.com/shareArticle?mini=true
 &url={{ .Permalink }}
 &title={{ .Title | default .Site.Title }}
-&summary={{ .Params.excerpt | default .Site.Params.Description }}">
-  <img height="32px" width="32px" src='{{ "dist/img/linkedin.svg" | absURL }}' />
+&summary={{ .Params.excerpt | default .Site.Params.Description }}"
+>
+  <img
+    height="32px"
+    width="32px"
+    src="{{ 'dist/img/linkedin.svg' | absURL }}"
+    alt="linkedIn"
+  />
 </a>
